--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node-mariadb": "^0.1.1",
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^4.6.8",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "request": "^2.88.0",
     "sendmail": "^1.4.1",
     "sprintf-js": "^1.1.1"
