--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "acorn": "^6.0.4",
+    "browserify-middleware": "^8.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.6.1",
     "express": "~4.16.0",
     "helmet": "^3.13.0",
     "http-errors": "~1.6.2",
@@ -17,7 +20,6 @@
     "node-mariadb": "^0.1.1",
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^4.6.8",
-    "pug": "^2.0.3",
     "request": "^2.88.0",
     "sendmail": "^1.4.1",
     "sprintf-js": "^1.1.1"
